# binance_detector

./: .env.example  .gitignore  CLAUDE.md  README.md  polymarket_5_m_roadmap_v_1.md  pyproject.toml
.claude/: settings.local.json
.claude/agents/: git-commit-writer.md
configs/: basis_guards_v1.json  entry_policy_v1.json  entry_policy_v2.json  live_execution_v1.json  paper_execution_v1.json  pm_market_registry.json  tier_calibration_v1.json
data/logs/: live_paper_loop_20260325T110301Z.jsonl  live_paper_loop_20260325T184955Z.jsonl
docs/: README.md  VPS_QUICKSTART.md
docs/roadmap/: polymarket_5_m_roadmap_v_2.md  polymarket_5_m_roadmap_v_2_1_tier_calibration.md  redeem_automation_roadmap.md
docs/stages/: 2026-03-24_stage_01_foundation.md  2026-03-24_stage_02_simulation_analytics.md  2026-03-24_stage_03_signal_core.md  2026-03-24_stage_04_binance_rest_binding.md  2026-03-24_stage_05_pm_execution_ops.md  2026-03-24_stage_06_real_capture_paper_loop.md  2026-03-24_stage_07_v2_live_loop_hardening.md  2026-03-26_stage_17_Lardio.md  (+28 more)
scripts/: analyze_counterfactual_thresholds.py  analyze_live_paper_loop.py  analyze_outcome_edge.py  analyze_pnl.py  analyze_time_of_day.py  backfill_binance.py  calc_daily_pnl.py  capture_live_snapshots.py  check_pm_quote.py  export_simulation_report.py  export_tick_debug_csv.py  resolve_live_paper_outcomes.py  run_live_bot.py  run_live_canary.py  run_live_loop.py  run_live_paper_loop.py  run_observability_server.py  run_paper_from_capture.py  run_redeem.py  run_redeem_service.py  run_simulation.py  setup_pm_api_key.py  train_model.py
(+53 files in other folders)
